imgs bugs repared. clipPath does not work

--- a/css/style.css
+++ b/css/style.css
@@ -175,6 +175,7 @@ h4 {
 
     .divImg img {
         width: 100%;
+        max-width: 30rem;
         clip-path: url(#mascarabocetando);
     }
 
@@ -213,7 +214,8 @@ h4 {
 }
 
     .imagenPropia img {
-        width: 70%;
+        width: 50vw;
+        max-width: 50rem;
         clip-path: url(#mascaraImgPropia);
     }
 
